--- a/requirements.txt
+++ b/requirements.txt
@@ -21,13 +21,13 @@ pywhatkit>=5.4
 # System Control
 pyautogui>=0.9.54
 pycaw>=20230407
+psutil>=5.9.0
 
 # Audio Processing
 numpy>=1.24.0
 
-# Utilities
-python-dotenv>=1.0.0
-wikipedia>=1.4.0
-pyjokes>=0.6.0
-rich>=13.0.0
-mtranslate>=1.8
+# Document Generation
+python-docx>=0.8.11
+python-pptx>=0.6.23
+reportlab>=4.0.0
+Pillow>=10.0.0
