--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,9 @@ pywhatkit>=5.4
 
 # System Control
 pyautogui>=0.9.54
-pycaw>=20230407
+pycaw
+chromadb
+sentence-transformers>=20230407
 psutil>=5.9.0
 AppOpener>=1.6
 
