--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,10 @@ python-docx>=0.8.11
 python-pptx>=0.6.23
 reportlab>=4.0.0
 Pillow>=10.0.0
+fpdf>=1.7.2
+
+# Utilities
+python-dotenv>=1.0.0
+rich>=13.0.0
+SpeechRecognition>=3.10.0
+pyttsx3>=2.90
