--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,11 @@ webdriver-manager>=3.8.6
 beautifulsoup4>=4.12.0
 requests>=2.31.0
 pywhatkit>=5.4
+tavily-python>=0.3.0
 
 # System Control
 pyautogui>=0.9.54
+pyperclip>=1.8.2
 pycaw
 chromadb
 sentence-transformers>=20230407
@@ -33,6 +35,7 @@ python-docx>=0.8.11
 python-pptx>=0.6.23
 reportlab>=4.0.0
 Pillow>=10.0.0
+opencv-python>=4.8.0
 fpdf>=1.7.2
 
 # Utilities
